--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "firebase": "^8.4.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-flash-message": "^0.1.23",
